--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Demo page - change 3</title>
     <title>Home Title</title>
-
+    Hello rebase change
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
           Features-title change 
