--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Demo page - change 3</title>
     <title>Home Title</title>
     Hello rebase change
+   Hello u2 change - rebase
+   
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
           Features-title change 
